# mmtui

./: .gitignore  2025_bracket.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  release.yml
Formula/: mmtui.rb
api/: Cargo.toml
api/src/: client.rs  espn.rs  henrygd.rs  lib.rs
docs/plans/: 2026-02-26-custodian-wizard.md
src/: app.rs  draw.rs  keys.rs  main.rs
src/components/: banner.rs  banner_frames.rs  bracket.rs  mod.rs
src/state/: app_settings.rs  app_state.rs  chat.rs  custodian.rs  messages.rs  mod.rs  network.rs  refresher.rs
src/ui/: layout.rs
tasks/: ncaa-hybrid-adapter-design.md  todo.md
