[package]
name = "mmtui"
version = "0.1.0"
authors = ["Andrew Schneider <andjschneider@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/mlb-rs/mlbt"
readme = "README.md"
description = "A terminal user interface for the NCAA March Madness tournament. Watch the bracket in your terminal!"
keywords = ["basketball", "ncaa", "march-madness", "terminal", "tui"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[workspace]
members = [".", "api"]

[dependencies]
anyhow = "1.0.100"
better-panic = "0.3.0"
chrono = "0.4.43"
crossterm = "0.29.0"
log = "0.4.29"
ncaa-api = { path = "api", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tui = { package = "ratatui", version = "0.30.0", features = ["unstable-rendered-line-info"] }
tui-logger = { version = "0.18.1", features = ["crossterm"] }
