[package]
name = "ncaa-api"
version = "0.1.3"
authors = ["Andrew Schneider <andjschneider@gmail.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1.49.0", features = ["macros"] }
